# mcp-brasil-api

./: .gitignore  pyproject.toml  readme.md  server.py  smithery.yaml
mcp-cep/: .editorconfig  .env  README.md  cep.py  main.py  pyproject.toml
mcp-cnpj/: README.md  cnpj.py  main.py  pyproject.toml
src/: config.py
src/tools/: banco.py  cambio.py  cep.py  cnpj.py  ddd.py  feriados.py  fipe.py  schemas.py
src/utils/: __init__.py  api.py  formatters.py  validators.py
tests/: test_api.py  test_fipe.py  test_taxas.py
